added description to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Mykhailo Goldenberg",
+	"description": "Deploying basic app to show some backend skills",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
