--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Mykhailo Goldenberg",
 	"description": "Deploying basic app to show some backend skills",
+	"keywords": ["npm", "freecodecamp", "backend", "deploy"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
