--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Mykhailo Goldenberg",
 	"description": "Deploying basic app to show some backend skills",
 	"keywords": ["npm", "freecodecamp", "backend", "deploy"],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
