--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://idontknow/todo.git"
+		"url": "https://github.com/MikeGolden/boilerplate-npm-backend-freecodecamp"
 	}
 }
